--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 Project_3.vehicles.us/vehicles_us.csv
+
+Project_4.megaline/megaline_calls.csv
+Project_4.megaline/megaline_internet.csv
+Project_4.megaline/megaline_messages.csv
+Project_4.megaline/megaline_plans.csv
+Project_4.megaline/megaline_users.csv
