--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Project_4.megaline/megaline_internet.csv
 Project_4.megaline/megaline_messages.csv
 Project_4.megaline/megaline_plans.csv
 Project_4.megaline/megaline_users.csv
+
+Project_5.games/games.csv
