--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ Project_4.megaline/megaline_plans.csv
 Project_4.megaline/megaline_users.csv
 
 Project_5.games/games.csv
+
+Project_6.cabs/moved_project_sql_result_01.csv
+Project_6.cabs/moved_project_sql_result_04.csv
+Project_6.cabs/moved_project_sql_result_07.csv
