--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Deforestasi/Indo_60_1641792743_fix.xls
+
 Project_3.vehicles.us/vehicles_us.csv
 
 Project_4.megaline/megaline_calls.csv
@@ -11,3 +13,14 @@ Project_5.games/games.csv
 Project_6.cabs/moved_project_sql_result_01.csv
 Project_6.cabs/moved_project_sql_result_04.csv
 Project_6.cabs/moved_project_sql_result_07.csv
+
+Project_7.y_afisha/costs_us.csv
+Project_7.y_afisha/orders_log_us.csv
+Project_7.y_afisha/visits_log_us.csv
+
+Project_8.online_store/hypotheses_us.csv
+Project_8.online_store/orders_us.csv
+Project_8.online_store/visits_us.csv
+
+Project_9.market_research/rest_data_us.csv
+
