--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ Project_8.online_store/visits_us.csv
 
 Project_9.market_research/rest_data_us.csv
 
+Project_10.food_store_research/logs_exp_us.csv
+
+Project_11.yt_video_ads/.ipynb_checkpoints
+Project_11.yt_video_ads/trending_by_time.csv
+Project_11.yt_video_ads/Proyek11_YoutubeVideoAdsAnalysis.ipynb
+
+Project_12.gym_analysis/gym_churn_us.csv
+
+Project_13.retail_analysis/data.csv
+Project_13.retail_analysis/product_codes_us.csv
+PProject_13.retail_analysis/retail_dataset_us.csv
